@@ -53,8 +53,8 @@
                 </a>
               </li>
               <li class="mlauto mtauto mbauto">
-                <div class="dropDown dropDown--rightArrow inbl">
-                  <button class="increase-surface-click color-white js-dropDown-button inline-flex" type="button">
+                <div class="dropDown dropDown--rightArrow inbl dropDown-logout">
+                  <button class="increase-surface-click color-white js-dropDown-button inline-flex dropDown-logout-button" type="button">
                     <span class="alignright">
                       <span class="bl">Doctor Willy</span>
                       <span class="bl smaller m0 opacity-30 lh100">willydoctor@protonmail.com</span>
@@ -62,7 +62,7 @@
                     <svg viewBox="0 0 16 16" class="icon-12p ml0-5 mr0-5 expand-caret mtauto mbauto" role="img" aria-hidden="true" focusable="false">
                       <use xlink:href="#shape-caret"></use>
                     </svg>
-                    <span class="mtauto mbauto bordered rounded50 p0-5 inbl opacity-30">DW</span>
+                    <span class="mtauto mbauto bordered rounded50 p0-5 inbl opacity-30 dropDown-logout-initials">DW</span>
                   </button>
                   <div class="js-dropDown-content dropDown-content" hidden>
                     <div class="p1">
