@@ -1,0 +1,6 @@
+.dropDown-logout-button {
+  color: var(--color-nav-link, $white);
+}
+.dropDown-logout-initials {
+  border-color: var(--color-nav-link, $pm-global-border);
+}
