@@ -73,6 +73,7 @@ $rtl-option: true;
 @import "pm-styles/pm-tooltips";
 @import "pm-styles/pm-wizard";
 @import "pm-styles/pm-sticky-header";
+@import "pm-styles/pm-dropdown-logout";
 
 @import "pm-styles/pm-header-searchbar";
 @import "pm-styles/pm-header-topnav";
