@@ -7,6 +7,7 @@ Logout dropdown
 - added it :)
 - added helpers `opacity-30`, `lh100`, `bordered` container
 - commented some stuff (`q` styles)
+- updated “How to use the Design system” (new partial)
 
 
 ## Updated/fixes
